# JART

./: .gitmodules  CMakeLists.txt  README.md
ImageIO/: CMakeLists.txt
ImageIO/include/ImageIO/: ImageIO.h
ImageIO/src/: ImageIO.cpp  lodepng.cpp
RayTracer/: CMakeLists.txt
RayTracer/include/RayTracer/: Camera.h  Direction.h  DirectionalLight.h  IIntersectable.h  ILight.h  ITraceable.h  ImagePlane.h  Material.h  Pixel.h  Plane.h  PointLight.h  Position.h  Scene.h  Sphere.h  Test.h  Triangle.h
RayTracer/src/: Camera.cpp  Direction.cpp  DirectionalLight.cpp  ImagePlane.cpp  Pixel.cpp  Plane.cpp  PointLight.cpp  Position.cpp  Scene.cpp  Sphere.cpp  Test.cpp  Triangle.cpp
Renderer/: CMakeLists.txt
Renderer/include/: PNGExporter.h
Renderer/screenshots/: threeColorsMining.ppm
Renderer/src/: PNGExporter.cpp  main.cpp
Tests/: CMakeLists.txt
Tests/ground_truths/: Centered_Red_Sphere_With_Directional_Light.ppm  Centered_Sphere_With_Shadow_On_Plane.ppm  Mirror_Bounded_Plane_With_Three_Spheres.ppm  Mirror_Plane_Single_Sphere.ppm  Mirror_Planes_Against_Each_Other_No_Infinite_Recursion.ppm  Mirror_Sphere_On_Plane_With_Diffuse_Shadowing_Sphere.ppm  PointLight_InBetween_Two_Spheres.ppm  PointLight_On_Sphere_And_Plane.ppm  PointLight_Two_Spheres_Self_Shadowing.ppm  Single_Sphere_And_Plane_With_Background_SkyBlue.ppm  Three_PointLights_Onto_Plane_In_Row.ppm  Two_DirectionalLights_On_Single_Sphere.ppm  Two_Spheres_Self_Shadowing.ppm  Two_Triangles_Different_Angles_To_Light_And_Camera.ppm  small_moved_white_sphere.ppm
Tests/src/: FullScenesTest.cpp  mytest.cpp
